[package]
name = "cap-std-workspace"
version = "3.4.0"
description = "Capability-based version of the Rust standard library"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["std", "api", "network", "file"]
categories = ["filesystem", "network-programming"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"
publish = false
exclude = ["/.*"]
# This is also checked in CI.
rust-version = "1.63"

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes", "io_safety"] }
anyhow = "1.0.37"
cap-async-std = { path = "cap-async-std", version = "3.4.0" }
cap-fs-ext = { path = "cap-fs-ext", version = "3.4.0" }
cap-net-ext = { path = "cap-net-ext", version = "3.4.0" }
cap-directories = { path = "cap-directories", version = "3.4.0" }
cap-std = { path = "cap-std", version = "3.4.0" }
cap-tempfile = { path = "cap-tempfile", version = "3.4.0" }
cap-rand = { path = "cap-rand", version = "3.4.0" }
rand = "0.8.1"
tempfile = "3.1.0"
camino = "1.0.5"
libc = "0.2.100"
io-lifetimes = "2.0.0"

[target.'cfg(not(windows))'.dev-dependencies]
rustix = { version = "0.38.0", features = ["fs"] }

[target.'cfg(windows)'.dev-dependencies]
# nt_version uses internal Windows APIs, however we're only using it
# for testing here.
nt_version = "0.1.3"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_SystemServices",
]

[features]
default = []
fs_utf8 = [
    "cap-std/fs_utf8",
    "cap-fs-ext/fs_utf8",
    "cap-tempfile/fs_utf8",
]
async_std_fs_utf8 = [
    "cap-async-std/fs_utf8",
    "cap-fs-ext/async_std_fs_utf8"
]
arf_strings = [
    "cap-std/arf_strings",
    "cap-fs-ext/arf_strings",
    "cap-tempfile/arf_strings",
]
async_std_arf_strings = [
    "cap-async-std/arf_strings",
    "cap-fs-ext/async_std_arf_strings"
]

[workspace]
members = [
  "cap-async-std",
  "cap-fs-ext",
  "cap-net-ext",
  "cap-directories",
  "cap-primitives",
  "cap-rand",
  "cap-std",
  "cap-tempfile",
  "cap-time-ext",
  # Work around https://github.com/rust-lang/cargo/issues/8338.
  #"fuzz",
]
