[package]
name = "cap-std-workspace"
version = "3.4.5"
description = "Capability-based version of the Rust standard library"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["std", "api", "network", "file"]
categories = ["filesystem", "network-programming"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"
publish = false
exclude = ["/.*"]
# This is also checked in CI.
rust-version = "1.63"

[dev-dependencies]
anyhow = "1.0.37"
cap-fs-ext = { path = "cap-fs-ext", version = "3.4.5" }
cap-net-ext = { path = "cap-net-ext", version = "3.4.5" }
cap-directories = { path = "cap-directories", version = "3.4.5" }
cap-std = { path = "cap-std", version = "3.4.5" }
cap-tempfile = { path = "cap-tempfile", version = "3.4.5" }
cap-rand = { path = "cap-rand", version = "3.4.5" }
rand = "0.8.1"
tempfile = "3.1.0"
camino = "1.0.5"
libc = "0.2.100"
io-lifetimes = "2.0.0"

[target.'cfg(not(windows))'.dev-dependencies]
rustix = { version = "1.0.0", features = ["fs"] }

[target.'cfg(windows)'.dev-dependencies]
# nt_version uses internal Windows APIs, however we're only using it
# for testing here.
nt_version = "0.1.3"

[target.'cfg(windows)'.dependencies.windows-sys]
version = ">=0.52, <=0.59"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
]

[features]
default = []
fs_utf8 = [
    "cap-std/fs_utf8",
    "cap-fs-ext/fs_utf8",
    "cap-tempfile/fs_utf8",
]
arf_strings = [
    "cap-std/arf_strings",
    "cap-fs-ext/arf_strings",
    "cap-tempfile/arf_strings",
]

[workspace]
members = [
  "cap-fs-ext",
  "cap-net-ext",
  "cap-directories",
  "cap-primitives",
  "cap-rand",
  "cap-std",
  "cap-tempfile",
  "cap-time-ext",
  # Work around https://github.com/rust-lang/cargo/issues/8338.
  #"fuzz",
]
