[package]
name = "cap-async-std"
version = "0.26.0-patch1"
description = "Capability-based version of async-std"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["network", "file", "async", "future", "await"]
categories = ["filesystem", "network-programming", "asynchronous", "concurrency"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2018"

[dependencies]
arf-strings = { version = "0.6.7", optional = true }
# Enable "unstable" for `spawn_blocking`.
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
cap-primitives = { path = "../cap-primitives", version = "^0.26.0-patch0" }
io-lifetimes = { version = "0.7.0", default-features = false, features = ["async-std"] }
ipnet = "2.3.0"
io-extras = { version = "0.15.0", features = ["use_async_std"] }
camino = { version = "1.0.5", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6", features = ["fs"] }

[features]
default = []
fs_utf8 = ["camino"]
arf_strings = ["fs_utf8", "arf-strings"]
tokio1 = ["async-std/tokio1"]
