[package]
name = "cap-async-std"
version = "3.3.0"
description = "Capability-based version of async-std"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["network", "file", "async", "future", "await"]
categories = ["filesystem", "network-programming", "asynchronous", "concurrency"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
arf-strings = { version = "0.7.0", optional = true }
async-std = { version = "1.13.0", features = ["attributes", "io_safety"] }
cap-primitives = { path = "../cap-primitives", version = "^3.3.0" }
io-lifetimes = { version = "2.0.0", default-features = false, features = ["async-std"] }
io-extras = { version = "0.18.0", features = ["use_async_std"] }
camino = { version = "1.0.5", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0", features = ["fs"] }

[features]
default = []
fs_utf8 = ["camino"]
arf_strings = ["fs_utf8", "arf-strings"]
tokio1 = ["async-std/tokio1"]
