[package]
name = "cap-directories"
version = "1.0.15"
description = "Capability-based standard directories for config, cache and other data"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["app_dirs", "path", "folder", "xdg", "basedir"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2018"

[dependencies]
cap-std = { path = "../cap-std", version = "^1.0.15" }
directories-next = "2.0.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
]
