[package]
name = "cap-directories"
version = "3.3.0"
description = "Capability-based standard directories for config, cache and other data"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["app_dirs", "path", "folder", "xdg", "basedir"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
cap-std = { path = "../cap-std", version = "^3.3.0" }
directories-next = "2.0.0"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
]
