[package]
name = "cap-filetime"
version = "0.1.0"
description = "Capability-oriented filesystem timestamps"
authors = ["Dan Gohman <sunfish@mozilla.com>", "Jakub Konka <kubkon@jakubkonka.com>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["filesystem", "timestamp", "mtime", "filetime"]
categories = ["filesystem"]
repository = "https://github.com/sunfishcode/cap-std"
edition = "2018"
readme = "README.md"

[dependencies]
cap-std = { path = "../cap-std", version = "^0.1.0"}
cap-primitives = { path = "../cap-primitives", version = "^0.1.0"}

[badges]
maintenance = { status = "actively-developed" }
