[package]
name = "cap-fs-ext"
version = "3.4.5"
description = "Extension traits for `Dir`, `File`, etc."
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["filesystem"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
arf-strings = { version = "0.7.0", optional = true }
cap-std = { path = "../cap-std", optional = true, version = "3.4.5" }
cap-primitives = { path = "../cap-primitives", version = "3.4.5" }
io-lifetimes = { version = "2.0.0", default-features = false }
camino = { version = "1.0.5", optional = true }

[features]
default = ["std"]
fs_utf8 = ["cap-std/fs_utf8", "camino"]
arf_strings = ["cap-std/arf_strings", "fs_utf8", "arf-strings"]
std = ["cap-std"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = ">=0.52, <=0.59"
features = [
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
cap-tempfile = { path = "../cap-tempfile" }
