[package]
name = "cap-fs-ext"
version = "4.0.2"
description = "Extension traits for `Dir`, `File`, etc."
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["filesystem"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
arf-strings = { version = "0.7.0", optional = true }
cap-std = { path = "../cap-std", optional = true, version = "4.0.2" }
cap-primitives = { path = "../cap-primitives", version = "4.0.2" }
io-lifetimes = { version = "3.0.1", default-features = false }
camino = { version = "1.0.5", optional = true }

[features]
default = ["std"]
fs_utf8 = ["cap-std/fs_utf8", "camino"]
arf_strings = ["cap-std/arf_strings", "fs_utf8", "arf-strings"]
std = ["cap-std"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = ">=0.60, <0.62"
features = [
    "Win32_Storage_FileSystem",
]

[dev-dependencies]
cap-tempfile = { path = "../cap-tempfile" }
