[package]
name = "cap-net-ext"
version = "2.0.0"
description = "Extension traits for `TcpListener`, `Pool`, etc."
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["filesystem"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
cap-std = { path = "../cap-std", version = "^2.0.0" }
cap-primitives = { path = "../cap-primitives", version = "^2.0.0" }
rustix = { version = "0.38.0", features = ["net"] }
smallvec = "1.10"
