[package]
name = "cap-std-tests"
version = "0.0.0"
edition = "2018"
publish = false

[dev-dependencies]
cap-std = { path = "..", version = "^0.1.0"}
cap-tempfile = { path = "../cap-tempfile", version = "^0.1.0"}
cfg-if = "0.1.9"
rand = "0.7.3"

[target.'cfg(not(windows))'.dev-dependencies]
libc = "0.2.72"

[target.'cfg(windows)'.dev-dependencies]
winx = "0.19.0"
winapi = { version = "0.3.9", features = [
    "std",
    "errhandlingapi",
    "handleapi",
    "processthreadsapi",
    "profileapi",
    "securitybaseapi",
    "winbase",
    "winerror",
    "ws2def",
    "fileapi",
    "aclapi",
    "winioctl"
] }
