[package]
name = "cap-std"
version = "0.21.2-alpha.0"
description = "Capability-based version of the Rust standard library"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["std", "api", "network", "file"]
categories = ["filesystem", "network-programming"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2018"

[dependencies]
arf-strings = { version = "0.6.3", optional = true }
cap-primitives = { path = "../cap-primitives", version = "^0.22.0"}
ipnet = "2.3.0"
io-extras = "0.12.0"
io-lifetimes = { version = "0.4.0", default-features = false }
camino = { version = "1.0.5", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = "0.31.0"

[features]
default = []
fs_utf8 = ["camino"]
arf_strings = ["fs_utf8", "arf-strings"]
