[package]
name = "cap-std"
version = "3.4.2"
description = "Capability-based version of the Rust standard library"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["std", "api", "network", "file"]
categories = ["filesystem", "network-programming"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
arf-strings = { version = "0.7.0", optional = true }
cap-primitives = { path = "../cap-primitives", version = "^3.4.2" }
io-extras = "0.18.3"
io-lifetimes = { version = "2.0.0", default-features = false }
camino = { version = "1.0.5", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.0", features = ["fs"] }

[features]
default = []
fs_utf8 = ["camino"]
arf_strings = ["fs_utf8", "arf-strings"]
