[package]
name = "cap-tempfile"
version = "1.0.8"
description = "Capability-based temporary directories"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["filesystem", "tmpfile", "tempfile"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2018"

[dependencies]
cap-std = { path = "../cap-std", version = "^1.0.8" }
uuid = { version = "1.0.0", features = ["v4"] }
camino = { version = "1.0.5", optional = true }

[target.'cfg(target_os = "emscripten")'.dependencies]
rand = "0.8.1"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.37.0", features = ["procfs"] }

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
]

[features]
default = []
fs_utf8 = ["cap-std/fs_utf8", "camino"]
arf_strings = ["cap-std/arf_strings"]
