[package]
name = "cap-tempfile"
version = "3.4.5"
description = "Capability-based temporary directories"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["filesystem", "tmpfile", "tempfile"]
categories = ["filesystem"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
cap-std = { path = "../cap-std", version = "^3.4.5" }
uuid = { version = "1.0.0", features = ["v4"] }
camino = { version = "1.0.5", optional = true }

[target.'cfg(target_os = "emscripten")'.dependencies]
rand = "0.8.1"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0.0" }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
rustix-linux-procfs = "0.1.1"

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = ">=0.60, <0.62"
features = [
    "Win32_Foundation",
]

[features]
default = []
fs_utf8 = ["cap-std/fs_utf8", "camino"]
arf_strings = ["cap-std/arf_strings"]
