[package]
name = "cap-time-ext"
version = "0.26.1"
description = "Extension traits for `SystemClock` and `MonotonicClock`"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["time"]
categories = ["date-and-time"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2018"

[dependencies]
cap-primitives = { path = "../cap-primitives", version = "^0.26.0-patch0" }
cap-std = { path = "../cap-std", optional = true, version = "^0.26.0-patch0" }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6", features = ["time"] }

[target.'cfg(windows)'.dependencies]
once_cell = "1.5.2"
winx = "0.33.0"
