[package]
name = "cap-time-ext"
version = "4.0.0"
description = "Extension traits for `SystemClock` and `MonotonicClock`"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
    "Jakub Konka <kubkon@jakubkonka.com>",
]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["time"]
categories = ["date-and-time"]
repository = "https://github.com/bytecodealliance/cap-std"
edition = "2021"

[dependencies]
ambient-authority = "0.0.2"
cap-primitives = { path = "../cap-primitives", version = "^4.0.0" }
cap-std = { path = "../cap-std", optional = true, version = "^4.0.0" }
iana-time-zone = "0.1.57"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "1.0.0", features = ["time"] }

[target.'cfg(windows)'.dependencies]
once_cell = "1.5.2"
winx = "0.36.0"
