[package]
name = "cap-std-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.3.2"
arbitrary = { version = "0.4.5", features = ["derive"] }
tempfile = "3.1.0"
# Disable default features, including `no_racy_asserts`, because we want to
# enable the racy asserts, because the cap-primitives fuzz target doesn't
# use threads, and does want extra checking.
cap-primitives = { path = "../cap-primitives", default-features = false, features = ["arbitrary"] }

[[bin]]
name = "cap-primitives"
path = "fuzz_targets/cap-primitives.rs"
test = false
doc = false

# Work around https://github.com/rust-lang/cargo/issues/8338
[workspace]
