[package]
name = "cap-std-fuzz"
version = "0.0.0"
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.0"
arbitrary = { version = "1.0.0", features = ["derive"] }
tempfile = "3.1.0"
cap-primitives = { path = "../cap-primitives", features = ["arbitrary"] }

[[bin]]
name = "cap-primitives"
path = "fuzz_targets/cap-primitives.rs"
test = false
doc = false

# Work around https://github.com/rust-lang/cargo/issues/8338
[workspace]
